<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_select_plan"
        android:icon="@drawable/action_select_plan"
        android:orderInCategory="10"
        android:showAsAction="ifRoom"
        android:title="@string/action_select_plan"/>
    <item
        android:id="@+id/action_jump_to_today"
        android:icon="@drawable/action_jump_to_today"
        android:orderInCategory="20"
        android:showAsAction="ifRoom"
        android:title="@string/action_jump_to_today"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/action_settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_help"
        android:icon="@drawable/action_help"
        android:orderInCategory="110"
        android:showAsAction="ifRoom"
        android:title="@string/action_help"/>

</menu>