<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/race_date_picker_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/race_date_picker_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <DatePicker
        android:id="@+id/race_date_picker_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/race_date_picker_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/race_date_picker_btn_no_race"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/race_date_picker_btn_done"
        android:layout_marginLeft="20dp"
        android:text="@string/race_date_picker_btn_no_race" />

    <Button
        android:id="@+id/race_date_picker_btn_done"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/race_date_picker_date"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/race_date_picker_btn_done" />

</RelativeLayout>