<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/wrkout_recrdr_stopwatch_time"
        style="@style/wrkout_recrdr_stopwatch_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="00:00:00" />

    <TextView
        android:id="@+id/wrkout_recrdr_distance_total"
        style="@style/wrkout_recrdr_distance_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wrkout_recrdr_stopwatch_time"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="00" />

    <TextView
        android:id="@+id/wrkout_recrdr_stopwatch_lap"
        style="@style/wrkout_recrdr_stopwatch_lap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wrkout_recrdr_distance_total"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="00:00:00" />

    <Button
        android:id="@+id/wrkout_recrdr_btn_start"
        style="@style/wrkout_recrdr_button.start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/wrkout_recrdr_btn_start" />

    <Button
        android:id="@+id/wrkout_recrdr_btn_lap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/wrkout_recrdr_btn_start"
        android:layout_centerHorizontal="true"
        android:text="@string/wrkout_recrdr_btn_lap" />

    <Button
        android:id="@+id/wrkout_recrdr_btn_stop"
        style="@style/wrkout_recrdr_button.stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/wrkout_recrdr_btn_start"
        android:layout_marginRight="10dp"
        android:text="@string/wrkout_recrdr_btn_stop" />

    <ImageView
        android:id="@+id/wrkout_recrdr_location_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/wrkout_recrdr_stopwatch_time"
        android:layout_marginLeft="10dp"
        android:src="@drawable/wrkout_recrdr_location_searching" />

</RelativeLayout>